Update alldocker-image.yaml for Azure Pipelines

--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -20,7 +20,7 @@ jobs:
       vmImage: 'ubuntu-latest'
 
     variables:
-      path: "/home/vsts/work/1/s"  
+      homedir: "/home/vsts/work/1/s"  
     
     steps:
 
