--- a/alldocker-image.yaml
+++ b/alldocker-image.yaml
@@ -6,6 +6,10 @@
 trigger:
   - none
 
+variables:
+  HomeDirectory: "/home/vsts/work/1/s"
+
+
 
 parameters:
   - name: linux_package
@@ -18,9 +22,7 @@ jobs:
     timeoutInMinutes: 0
     pool:
       vmImage: 'ubuntu-latest'
-
-    variables:
-      homedir: "/home/vsts/work/1/s"  
+  
     
     steps:
 
@@ -55,30 +57,36 @@ jobs:
             
             echo "##vso[task.setvariable variable=TAG]$IMAGE_TAG"
             echo "Find the Image Tag: $IMAGE_TAG"
-            sudo mkdir -p /home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles && echo "appdatafiles directory created"
-            appdatafilesDirectory=/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles
+            sudo mkdir -p $(HomeDirectory)/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles && echo "appdatafiles directory created"
+            appdatafilesDirectory=$(HomeDirectory)/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles
 
-            installutilsFolderSource=/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/utilities/installutils
-            installutilsFolderDestination=/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils
+            installutilsFolderSource=$(HomeDirectory)/BoldBIEnterpriseEdition-Linux/application/utilities/installutils
+            installutilsFolderDestination=$(HomeDirectory)/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils
             sudo cp -r $installutilsFolderSource $installutilsFolderDestination && echo "installutils are moved into appdatafiles"
-            
-            id_webFileSource=/home/vsts/work/1/s/boldbi-ci/installscripts/jenkins-ci/kubernetes/shell_scripts/id_web/
-            id_webFileDestination=/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/idp/web
-            sudo cp -r $id_webFileSource $id_webFileDestination && echo "id_web moved"
+            ls $installutilsFolderDestination
+
+            id_webFileSource=$(HomeDirectory)/boldbi-ci/installscripts/jenkins-ci/kubernetes/shell_scripts/id_web/
+            id_webFileDestination=$(HomeDirectory)/BoldBIEnterpriseEdition-Linux/application/idp/web
+            sudo cp -r $id_webFileSource $id_webFileDestination && echo "entrypoint.sh moved properly"
             ls $id_webFileSource
             ls $id_webFileDestination
             
-            designerFileSource=/home/vsts/work/1/s/boldbi-ci/installscripts/jenkins-ci/kubernetes/shell_scripts/designer
-            designerFileDestination=/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/bi/dataservice
-            sudo cp -r $designerFileSource $designerFileDestination
-            configurationFileSource=/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/app_data
-            configurationFileDestination=/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils/app_data
-            sudo cp -r $configurationFileSource $configurationFileDestination
-            clientLibraryFileSource=/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/clientlibrary/clientlibrary.zip
-            clientLibraryFileDestination=/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils/app_data/optional-libs
+            designerFileSource=$(HomeDirectory)/boldbi-ci/installscripts/jenkins-ci/kubernetes/shell_scripts/designer/
+            designerFileDestination=$(HomeDirectory)/BoldBIEnterpriseEdition-Linux/application/bi/dataservice
+            sudo cp -r $designerFileSource $designerFileDestination && echo "designer files are moved"
+
+            configurationFileSource=$(HomeDirectory)/BoldBIEnterpriseEdition-Linux/application/app_data/
+            configurationFileDestination=$(HomeDirectory)/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils/app_data
+            sudo cp -r $configurationFileSource $configurationFileDestination && echo "app_data files are moved"
+            ls $configurationFileSource
+            ls $configurationFileDestination
+            
+            clientLibraryFileSource=$(HomeDirectory)/BoldBIEnterpriseEdition-Linux/clientlibrary/clientlibrary.zip
+            clientLibraryFileDestination=$(HomeDirectory)/BoldBIEnterpriseEdition-Linux/application/idp/web/appdatafiles/installutils/app_data/optional-libs
             sudo unzip -o $clientLibraryFileSource -d $clientLibraryFileDestination
-            sourceDir="/home/vsts/work/1/s/boldbi-ci/installscripts/jenkins-ci/kubernetes/dockerfiles/ubuntu/"
-            destinationDir="/home/vsts/work/1/s/BoldBIEnterpriseEdition-Linux/"
+
+            sourceDir="$(HomeDirectory)/boldbi-ci/installscripts/jenkins-ci/kubernetes/dockerfiles/ubuntu/"
+            destinationDir="$(HomeDirectory)/BoldBIEnterpriseEdition-Linux"
             # Find all .txt files in the source directory
             multipleDockerFileUrls=($(find "$sourceDir" -maxdepth 1 -type f -name "*.txt"))
             # Iterate through each file
