--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,6 +36,6 @@ jobs:
               --public-ip-sku Standard \
               --image syncfusion:bold-bi-enterprise-multi-tenant:-bring-your-own-license:6.4.6 \
               --size Standard_B4ms \
-              --admin-username syncfusion \
-              --admin-password Syncfusion@123 \
+              --admin-username \
+              --admin-password \
               --storage-sku Standard_LRS
